# elasticsearch-tutorial

./: .gitignore  BEGINNERS.md  README.md  pyproject.toml
tests/: __init__.py  fixtures.py  test_index.py  test_search.py
