[tool.poetry]
name = "elasticsearch-tutorial"
version = "0.0.1"
description = "An tutorial for elasticsearch"
authors = ["Harold Cohen"]

[tool.poetry.dependencies]
python = "^3.7.4"
elasticsearch = "7.9"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
